// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Test modal visible = false 1`] = `
<body>
  <script
    src="https://at.alicdn.com/t/font_1127944_82mztmm5t8t.js"
  />
  <div />
  <div />
  <div />
</body>
`;

exports[`Modal Test modal visible snapshot 1`] = `
<body>
  <div />
  <div>
    <div
      class="snake-modal-mask"
    />
  </div>
  <div>
    <div
      class="snake-modal"
      tabindex="-1"
    >
      <div
        class="snake-modal-wrapper"
      >
        <div
          class="snake-modal-close"
        >
          <svg
            class="snake-icon snake-icon-close"
          >
            <use
              xlink:href="#icon-close"
            />
          </svg>
        </div>
        <div
          class="snake-modal-wrapper-inner"
        >
          内容区
        </div>
        <div
          class="snake-modal-footer"
        >
          <div>
            <button
              class="snake-button snake-button-default snake-button-btn-gray"
              type="button"
            >
              <span>
                取消
              </span>
            </button>
            <button
              class="snake-button snake-button-default snake-button-btn-primary"
              type="button"
            >
              <span>
                确定
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <script
    src="https://at.alicdn.com/t/font_1127944_82mztmm5t8t.js"
  />
</body>
`;

exports[`Modal Test modal without footer 1`] = `
<body>
  <script
    src="https://at.alicdn.com/t/font_1127944_82mztmm5t8t.js"
  />
  <div />
  <div>
    <div
      class="snake-modal-mask"
    />
  </div>
  <div>
    <div
      class="snake-modal"
      tabindex="-1"
    >
      <div
        class="snake-modal-wrapper"
      >
        <div
          class="snake-modal-close"
        >
          <svg
            class="snake-icon snake-icon-close"
          >
            <use
              xlink:href="#icon-close"
            />
          </svg>
        </div>
        <div
          class="snake-modal-wrapper-inner"
        >
          内容区
        </div>
      </div>
    </div>
  </div>
</body>
`;
